examples/demo.css
/* https://github.com/theleagueof/league-spartan */
@font-face {
    font-family: 'League Spartan';
    src: url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.eot');
    src: url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.eot?#iefix') format('embedded-opentype'),
         url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.woff2') format('woff2'),
         url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.woff') format('woff'),
         url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.ttf') format('truetype'),
         url('https://raw.githubusercontent.com/theleagueof/league-spartan/master/_webfonts/leaguespartan-bold.svg#league_spartanbold') format('svg');
    font-weight: bold;
    font-style: normal;
}

body {
  padding: 20px;
  margin: 0 auto 200px;
  max-width: 1000px;
  background: #f8f8fa;
}

h1 {
  font-family: 'League Spartan';
  color: #445;
}

.center-align {
  display: flex;
  justify-content: center;
  text-align:center;
}

.header {
  text-align: center;
}

.panel {
  margin-left: 20px;
  margin-right: 20px;
}

.nomargin {
  margin: 0 !important;
}

.form-control {
  padding: 0px 0px;
}

#dropzone {
  padding: 30px;
  margin: 0 20% 30px;
  border: 4px dashed #ccc;
  border-radius: 8px;
  text-align: center;
  color: #444;
}

.hover {
  background: #eee;
}

#dropzone input {
  max-width: 100%;
}

.step {
  margin-bottom: 20px;
}

.step .img-thumbnail {
  margin-bottom: 20px;
}

.details {
  border-top: 3px solid #444;
  padding-left: 6px;
}

.details h3 {
  font-family: monospace;
  margin-top: 12px;
  font-size: 1.3em;
}

.det {
  padding: 10px 16px;
  text-decoration: italic;
}

.tools {
  margin: 10px 0;
}

.load {
  padding: 30px;
  background: #eee;
  border-radius: 8px;
  text-align: center;
  font-size: 2em;
  color: #444;
}

#addStep {
  max-width: 500px;
  margin: 20px auto;
}

#add-step-btn{
  margin-left: 10px;
}

#addStep .labels {
  text-align: right;
  padding: 6px;
  margin: 2px;
  font-weight: bold;
}

@media (max-width:768px) {
  #addStep .labels {
    text-align: left;
  }
}

#addStep .add {
  text-align: center;
  margin: 10px;
}
#save-seq {
  display: block;
  margin: 0px 10px 0px 0px;
  width: 250px;
}
.info {
  padding: 8px;
  text-align: center;
}
#gif {
  display: block;
  margin: 0px 0px 0px 10px;
  width: 250px;
}
#dwnld {
  max-width: 500px;
  margin: 20px auto;
  margin-left: 5px;
}

#gif_element {
  display: block;
  margin: 0 auto;
  width: 100%;
  height: auto;
}

#move-up {
    position: fixed;
    bottom: 50px;
    right: 40px;
    z-index: 550;
    display: none;
    background:transparent;
    border:none;
}

#move-up i {
    font-size:60px;
    opacity:0.7;
    color:#BABABA;
}

.btn-circle{
  min-width: 80px;
  min-height: 80px;
  text-align: center;
  display: flex !important;
  flex-direction: column;
  padding: 6px 0;
  font-size: 12px;
  line-height: 1.42;
  border-radius: 10px;
  margin-left: 5px;
  margin-right: 5px;
}
.radio{
  cursor:pointer;
  overflow: hidden;
  height: 80px;
  width: 80px;
  margin-left: 5px;
  margin-right: 5px;
}

.radio-group {
  margin-bottom: 20px;
  overflow: auto;
}

.no-border {
  border: 0px;
}

.savesequencemsg{
  display: none;
  text-align: center;
  }

.notification {
  background-color: #808b96;
  padding:4px;
  color:white;
  border-radius:3px;
  font-size:2rem;
  position:fixed;
  bottom:2px;
  left:50%;
  min-width:14rem;
  text-align:center;
  display:none;
  transform: translate(-50%, -50%);
}

#resetButton {
  margin-top: 20px;
}

.i-over {
  position: absolute;
  left: 15px;
  top: 15px;
  z-index: 2;
  color: white;
}

.i-small {
  left: 25px;
}

@media all and (max-width: 767px) {
  .center-align {
    justify-content: space-between;
  }
}
a.name-header{
  text-decoration: none;
  color: #445;
}

